# Scripts

./: .gitignore  cli.py  config.sample.toml  environment.yml  pyproject.toml
scripts/: __main__.py  app.py  author_size.py  copy_shutdown.py  count_archive.py  image_resize.py  remove_duplicate.py  rptl.py  ruff.py  utils.py
scripts/utils/: __init__.py  console.py  misc.py  notification.py  windows_message.py
