[project]
name = 'scripts'
version = '0.3.0'
requires-python = '>=3.12'

[tool.ruff]
preview = true
respect-gitignore = false
output-format = 'concise'

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'ANN',    # flake8-annotations
    'COM',    # flake8-commas
    'CPY',    # flake8-copyright
    'D',      # pydocstyle
    'E1',     # pycodestyle: E1*
    'E2',     # pycodestyle: E2*
    'ISC001', # flake8-implicit-str-concat: single-line-implicit-string-concatenation
    'PD901',  # pandas-vet: pandas-df-variable-name
    'PTH123', # flake8-use-pathlib: builtin-open
    'Q',      # flake8-quotes
    'S',      # flake8-bandit
    'TD',     # flake8-todos
]

[tool.pylint.messages_control]
confidence = ['HIGH', 'INFERENCE', 'INFERENCE_FAILURE']
disable = ['C', 'R', 'fixme']

[tool.mypy]
disable_error_code = ['var-annotated', 'import']
check_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true
